--- a/components/Navbar.module.scss
+++ b/components/Navbar.module.scss
@@ -1,6 +1,6 @@
-.navbar{
-    @apply w-full pt-10 fixed transition-all ease-in-out duration-100 bg-background pb-4 z-50 animate-fade-in-bottom;
-    span:hover{
-        @apply text-red-300;
-    }
+.navbar {
+  @apply w-full pt-10 fixed bg-background bg-opacity-80 backdrop-filter backdrop-blur-xl pb-4 z-50;
+  span:hover {
+    @apply text-red-300;
+  }
 }
