--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,7 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import "./hamburger.css";
 
 .text-name-gradient {
   background: linear-gradient(90deg, #ff9a9e 0%, #fad0c4 99%, #fad0c4 100%);
@@ -11,13 +12,31 @@
   text-fill-color: transparent;
 }
 
-html{
+html {
   scroll-behavior: smooth;
 }
-body{
- @apply bg-background text-white;
+body {
+  @apply bg-background text-white;
 }
 
-.filter-gray-color{
-  filter: invert(44%) sepia(0%) saturate(22%) hue-rotate(138deg) brightness(93%) contrast(86%);
+.filter-gray-color {
+  filter: invert(44%) sepia(0%) saturate(22%) hue-rotate(138deg) brightness(93%)
+    contrast(86%);
+}
+
+#globalLoader {
+  position: fixed;
+  z-index: 9999;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+}
+
+.container {
+  @apply max-w-3xl sm:max-w-4xl md:mx-auto px-10;
 }
